<resources>
    <string name="app_name">WhatsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="payments">Payments</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="linked_devices">Linked Devices</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="new_group">New Group</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="contacts">Contacts</string>
    <string name="refresh">Refresh</string>
</resources>